# long-text-simplifier

./: .env.exapmle  .gitignore  CMakeLists.txt  LICENSE  README.md  commandline.py  main.cpp  main.py  prompt.md  sample.txt  sample_text.txt  simplifier.py  window.py
